# c-sqlparser

./: .gitignore  CMakeLists.txt  README.md  main.c
sql/: MOCK_DATA.sql  MOCK_DATA2.sql
